# flux

./: .gitignore  ALGORITHM.md  Cargo.toml  PLAN.md  README.md  package-lock.json  package.json
crates/fastpack-core/: Cargo.toml
crates/fastpack-core/benches/: compression.rs
crates/fastpack-core/src/: compress.rs  decompress.rs  frame.rs  lib.rs
crates/fastpack-core/src/apex/: ans.rs  delta.rs  dictionary.rs  encoder.rs  mod.rs  template.rs  tokenizer.rs
crates/fastpack-node/: Cargo.toml
crates/fastpack-node/src/: lib.rs
crates/fastpack-wasm/: Cargo.toml
crates/fastpack-wasm/src/: lib.rs
crates/flux-core/: Cargo.toml
crates/flux-core/benches/: compression.rs
crates/flux-core/src/: error.rs  frame.rs  lib.rs  lz.rs  types.rs
crates/flux-core/src/columnar/: mod.rs
crates/flux-core/src/delta/: mod.rs
crates/flux-core/src/encoding/: integer.rs  mod.rs  string.rs  varint.rs
crates/flux-core/src/entropy/: mod.rs
crates/flux-core/src/schema/: cache.rs  inference.rs  mod.rs
crates/flux-wasm/: Cargo.toml
crates/flux-wasm/src/: lib.rs
docs/: FLUX_DESIGN.md  FLUX_ROADMAP.md  FLUX_SPEC.md
examples/: apex_benchmark.ts  benchmark.ts
examples/web-demo/: README.md  index.html  server.js
