[package]
name = "fastpack-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "High-performance compression library - WebAssembly bindings"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fastpack-core.workspace = true
wasm-bindgen = "0.2"
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"
