[package]
name = "flux-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "FLUX v2 JSON compression - WebAssembly bindings"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
flux-core = { path = "../flux-core" }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde_json = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"
